--- a/src/index.html
+++ b/src/index.html
@@ -6,59 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="styles/styles.css" />
+  <!-- <script src="https://cdn.tailwindcss.com/3.4.16"></script> -->
 </head>
 
-<body class="px-4 min-h-screen bg-slate-950 text-amber-50">
-  <!-- sample that need to be rewrrited -->
-  <div class="h-full max-w-xl mx-auto flex flex-col justify-between">
-    <header class="p-4 bg-slate-500 flex justify-between">
-      <div class="font-extrabold">Title</div>
-      <nav class="flex gap-4">
-        <a title="Service page" href="/">Service</a>
-        <a title="About page" href="/">About</a>
-        <a title="Contact page" href="/">Contact</a>
-      </nav>
-    </header>
-    <main class="basis-full shrink grow flex flex-col md:flex-row">
-      <!-- main content -->
-      <section class="md:basis-full md:grow p-4 bg-slate-950">
-        <img
-          src="https://images.unsplash.com/photo-1626808642875-0aa545482dfb?q=80&w=256&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="sample image" class="aspect-3/4 max-w-1/3 border-e-cyan-500 rounded-2xl float-left" />
-        <span class="max-w-3/5 float-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus odit
-          quaerat
-          asperiores debitis,
-          molestiae maiores deleniti saepe cumque tempore. Atque ut quisquam at perspiciatis natus quos id. Asperiores,
-          enim officiis.</span>
-      </section>
-      <!-- sidebar -->
-      <aside class="md:w-64 md:shrink p-4 bg-slate-600">
-        <h3 class="mb-4 text-xl font-bold">Sidebar title</h3>
-        <ul role="listbox">
-          <li role="listitem">
-            <a class="hover:text-amber-100" href="#" target="_blank" rel="noopener noreferrer">Extra link 1</a>
-          </li>
-          <li role="listitem">
-            <a class="hover:text-amber-100" href="#" target="_blank" rel="noopener noreferrer">Extra link 2</a>
-          </li>
-          <li role="listitem">
-            <a class="hover:text-amber-100" href="#" target="_blank" rel="noopener noreferrer">Extra link 3</a>
-          </li>
-          <li role="listitem">
-            <a class="hover:text-amber-100" href="#" target="_blank" rel="noopener noreferrer">Extra link 4</a>
-          </li>
-          <li role="listitem">
-            <a class="hover:text-amber-100" href="#" target="_blank" rel="noopener noreferrer">Extra link 5</a>
-          </li>
-        </ul>
-      </aside>
-    </main>
-    <footer class="p-4 bg-slate-700">
-      <p class="text-center text-xs">Copyright, 2025</p>
-    </footer>
-  </div>
-  <div id="app"></div><!-- section which is the right place to all the content with components -->
-  <script src="scripts/app.js"></script>
+<body>
+  <div id="app"></div>
+
+  <script type="module" src="scripts/app.js"></script>
 </body>
 
 </html>
